Nav display on mobile fixed

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -86,7 +86,7 @@
             top: var(--top);
             left: -100%;
             width: 100%;
-            height: calc(100% - var(--top));
+            height: calc(var(--bodyHeight) - var(--top));
             background: none;
             box-shadow: none;
             transition: all 0.2s ease-out;
